# infotec-study-system

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: admin.py  auth.py  portal.py  school_admin.py  settings.py  student.py  teacher.py
backend/app/core/: config.py  security.py
backend/app/db/: demo_blueprints.py  models.py  seed.py  session.py
backend/app/schemas/: contracts.py
backend/app/services/: activity_generator.py  activity_tasks.py  dashboard_data.py  grading.py  llm_config.py  portal_content.py
backend/tests/: test_app.py
docs/: infotec-platform-design.md  infotec-platform-wireframe.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  element.ts  main.ts
frontend/src/api/: client.ts
frontend/src/charts/: setup.ts
frontend/src/components/: AssistantDrawer.vue  AssistantPanel.vue  ChartPanelCard.vue  QuestionRenderer.vue  SectionCard.vue  StatCard.vue  ZodiacAgentAvatar.vue
frontend/src/composables/: useThemePreset.ts
frontend/src/data/: zodiacAgents.ts
frontend/src/router/: index.ts
frontend/src/stores/: session.ts
frontend/src/styles/: theme.css
frontend/src/types/: contracts.ts
frontend/src/views/: PortalAdminView.vue  PortalView.vue  SchoolAdminView.vue  StudentCenterView.vue  StudentSettingsView.vue  TeacherSettingsView.vue  TeacherShowcaseView.vue  TeacherWorkbenchView.vue
